Fixed alignment of banner image and image of me

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -15,6 +15,7 @@
     top: 5px;
     z-index: -1;
     height: 150px;
+    right: -120px;
 }
 
 #hello {
@@ -33,7 +34,7 @@
     width: 250px;
     height: 325px;
     top: 20px;
-    right: -260px;
+    right: -100px;
 }
 
 #aboutMe {
